# ultralytics-streamlit-realtime

./: .gitignore  LICENSE  README.md  app.py  app_simple.py  main.py  pyproject.toml
.devcontainer/: devcontainer.json
